--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
               <p class="works-img"><img src="img/portfolio.jpg" alt="" /></p>
               <p class="works-name">Portfolio</p>
               <p class="works-info">HTML/CSS/jQuery</p>
-              <a href="https://github.com/Yu-suke441/MyPortfolio.git">github</a>
+              <a href="https://github.com/Yu-suke441/MyPortfolio.git">githubURL</a>
             </div>
             <div class="works-item">
               <p class="works-img"><img src="img/portfolio2.jpg" alt="" /></p>
               <p class="works-name">Youtube Clone</p>
               <p class="works-info">React</p>
+              <a href="https://github.com/Yu-suke441/Youtube-React">githubURL</a>
             </div>
             <div class="works-item">
               <p class="works-img"><img src="img/noImage.jpeg" alt="" /></p>
